V2/manifests/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      color: green
  template:
    metadata:
      labels:
        app: hello
        color: green
    spec:
      containers:
        - name: hello
          image: ngbluegreen.azurecr.io/bluegreen:IMAGE_TAG
          ports:
            - containerPort: 8081
